# seatFinder

./: README.md  app.js  config.js  defaultConfig.js  package-lock.json  package.json  seating_wishes_80.xlsx  temp.rs
models/: SeatingArrangement.js
routes/: optimize.js  seating.js
seatFinderAlgo/: Cargo.toml
seatFinderAlgo/seat_finder_native/: README.md  package.json
seatFinderAlgo/seat_finder_native/native/: Cargo.toml
seatFinderAlgo/seat_finder_native/native/src/: lib.rs
seatFinderAlgo/seat_finder_rs/: Cargo.toml
seatFinderAlgo/seat_finder_rs/src/: lib.rs
seatFinderAlgo/src/: main.rs
seat_finder_native/: package-lock.json
seat_finder_native/native/: Cargo.toml
seat_finder_native/native/src/: lib.rs
test/: app.test.js  settings.test.js
utils/: computeStatistics.js  parseExcelFile.js
views/: index.pug  instructions.pug  layout.pug  loadArrangement.pug  optimize.pug  optimizeResult.pug  optimizing.pug  result.pug  seating.pug  settings.pug
